--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -64,3 +64,11 @@ h1, h2, h3, h4, h5{
   padding-bottom: 20px;
   font-size: 10px;
 }
+
+
+.links{
+
+  border: 1px solid #f1f1f1;
+  padding: 5;
+  font-size: 10px;
+}
